fix scrollbar and accordian text color

--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -37,6 +37,7 @@
         position: relative;
         z-index: 1;
         padding-left: rem(10) !important;
+        
         @extend %sidebar_menu_hover;
 
         .accordion-button1 {
@@ -122,6 +123,7 @@
     flex-grow: 1;
     margin-bottom: rem(30);
     overflow-y: auto;
+    margin-right: rem(2);
 
     .home_menu_container {
       margin-bottom: rem(10);
